View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0022686 | Open CASCADE | OCCT:DRAW | public | 2011-07-25 18:07 | 2012-03-29 17:26 |
Reporter | Assigned To | bugmaster | |||
Priority | normal | Severity | trivial | ||
Status | closed | Resolution | fixed | ||
OS | All | ||||
Target Version | 6.5.2 | Fixed in Version | 6.5.2 | ||
Summary | 0022686: Some Draw commands do not return necessary information in Draw_Interpretor, but write in cout. | ||||
Description | Example: tricheck write information in cout instead of dout. | ||||
Tags | No tags attached. | ||||
Test case number | emh 001 A6,E6,E7 emh 002 A4 | ||||
|
Dear BugMaster, SVN branch ( http://svn/svn/occt/branches/OCC22686 ) was testing, test results were compared with KAS:dev:products-20110810-opt Regressions were not found following differences emh 001 A6,E6,E7 002 A4 It is necessory to modify /dn45/occttests/tests/ED/emh/end set freelinks [lindex $l 9] set crossfaces [lindex $l 11] set asyncedges [lindex $l 13] See results in /dn45/occttests/results/KAS/dev/mkv-OCC22686-products_29082011/lin See reference results in /dn45/occttests/results/KAS/dev/products-20110810-opt_11082011/lin See test cases in /dn45/occttests/tests/ED |
|
Integration to occt repository Date: 2011-09-02 14:14:02 +0400 (Fri, 02 Sep 2011) New Revision: 8948 Modified: trunk/src/MeshTest/MeshTest_CheckTopology.cxx trunk/src/MeshTest/MeshTest_CheckTopology.hxx trunk/src/MeshTest/MeshTest_PluginCommands.cxx |
occt: master d2c43192 2011-09-02 10:14:02
Committer: bugmaster Details Diff |
0022686: Some Draw commands do not return necessary information in Draw_Interpretor, but write in cout. |
Affected Issues 0022686 |
|
mod - src/MeshTest/MeshTest_CheckTopology.cxx | Diff File | ||
mod - src/MeshTest/MeshTest_CheckTopology.hxx | Diff File | ||
mod - src/MeshTest/MeshTest_PluginCommands.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2011-07-27 17:59 | bugmaster | Assigned To | bugmaster => apl |
2011-07-27 17:59 | bugmaster | Status | new => assigned |
2011-07-28 14:57 |
|
Status | assigned => resolved |
2011-07-29 10:32 | bugmaster | Status | resolved => reviewed |
2011-07-29 10:32 | bugmaster | Fixed in Version | EMPTY => |
2011-08-01 12:49 | bugmaster | Target Version | => 6.5.2 |
2011-08-01 12:49 | bugmaster | Description Updated | |
2011-09-01 18:10 |
|
Note Added: 0018059 | |
2011-09-02 11:51 |
|
Status | reviewed => tested |
2011-09-02 14:15 | bugmaster | Note Added: 0018066 | |
2011-09-02 14:15 | bugmaster | Status | tested => verified |
2011-09-07 18:58 |
|
Test case number | => emh 001 A6,E6,E7 emh 002 A4 |
2012-03-29 17:26 | bugmaster | Changeset attached | => occt master d2c43192 |