0022686: Some Draw commands do not return necessary information in Draw_Interpretor, but write in cout.